[workspace] # rusrc: rust source
name = "CS205_C_CPP_2020Spring_RUST"
version = "0.0.1"
authors = ["Certseeds <Certseeds <51754303+Certseeds@users.noreply.github.com>"]
edition = "2021"
members = ["*/rusrc"]

[source.crates-io]
registry = "https://github.com/rust-lang/crates.io-index"

replace-with = 'tuna'
[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"

#replace-with = 'ustc'
#[source.ustc]
#registry = "git://mirrors.ustc.edu.cn/crates.io-index"

[net]
git-fetch-with-cli = true