cmake_minimum_required(VERSION 3.16.6)
set(PARENT_TARGET_NAME ${PROJECT_NAME})
project(${PROJECT_NAME}_PCH17 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")

add_library(${PROJECT_NAME} STATIC ${CMAKE_CURRENT_SOURCE_DIR}/pch.cpp)

target_compile_definitions(${PROJECT_NAME} PRIVATE CS203_DSAA_TEST_MACRO)
target_link_libraries(${PROJECT_NAME} PRIVATE
                      ${PARENT_TARGET_NAME}
                      ${PARENT_TARGET_NAME}_MULTIPLY)

unset(PARENT_TARGET_NAME)
